# kickstart

./: .bashrc  .env.example  .gitignore  .qmake.stash  .regex.md.swp  10-menu.py  CMakeLists.txt  Makefile  PlugInstallVim.sh  README.md  Regex.md  app.db  app.py  bridge.py  bridgemain.qml  cheatsheet.md  client.c  client.js  client.py  cm.sh  colors.py  colors.sh  compile_client.sh  compile_tcp_server.sh  index.html  info.txt  install-py.sh  install-python.sh  install.sh  install_with_curl.sh  install_with_wget.sh  installlazygit.sh  ipython_cheat.md  kickstart.pro  kickstart.sh  main.asm  main.c  main.cpp  main.css  main.js  (+22 more)
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
config/: create_database.sql
confs/: vimrc.txt
controller/: pageController.js  userController.js
css/: main.css
installer/: README.md  install.sh  kickstart.py
mingw/: qmlinstall.sh  qt6install.sh
models/: userModel.js
public/: index.html  main.js  style.css
routes/: pageRoutes.js  userRoutes.js
